# skills-service

./: .gitignore  Containerfile  Containerfile.manager  README.md  pyproject.toml
manager/: main.py  marketplace.py  requirements.txt
manager/tests/: requirements-test.txt  test_api.py  test_marketplace.py
manager/ui/: index.html
src/: config.py  discovery.py  indexer.py  main.py  mcp_server.py
tests/: test_api.py  test_discovery.py  test_mcp_server.py
